@startuml

title __COMPARATOR's Class Diagram__\n

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.comparator {
      class AlphabeticOrderComparator {
          + compare()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.comparator {
      class ParagraphComparator {
          + compare()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.comparator {
      class SymbolAppearanceComparator {
          ~ toFind : char
          + SymbolAppearanceComparator()
          + compare()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.comparator {
      class WordComparator {
          + compare()
      }
    }
  }
  

  AlphabeticOrderComparator -up-|> Comparator
  ParagraphComparator -up-|> Comparator
  SymbolAppearanceComparator -up-|> Comparator
  WordComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
